--- a/udaya/public/locales/en/common.json
+++ b/udaya/public/locales/en/common.json
@@ -1,6 +1,6 @@
 {
-  "what-is-habla": "What is Habla?",
-  "habla-description": "Habla is a nostr-based web app that enables anyone to earn from their writing.",
+  "what-is-habla": "What is Udaya?",
+  "habla-description": "Udaya is a nostr-based web app that enables anyone to earn from their writing.",
   "intro": "2 min intro",
   "popular-posts": "Popular posts",
   "popular-authors": "Popular authors",
