--- a/udaya/public/locales/zh/common.json
+++ b/udaya/public/locales/zh/common.json
@@ -1,6 +1,6 @@
 {
-  "what-is-habla": "Habla 是什麼？",
-  "habla-description": "Habla 是一個基於 nostr 的網絡應用，使任何人都能從他們的寫作中獲利。",
+  "what-is-habla": "Udaya 是什麼？",
+  "habla-description": "Udaya 是一個基於 nostr 的網絡應用，使任何人都能從他們的寫作中獲利。",
   "intro": "2分鐘入門",
   "popular-posts": "熱門帖子",
   "popular-authors": "熱門作者",
